# Rocket-CLI-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
close_direct_conversations/: CMakeLists.txt  main.c
close_im/: CMakeLists.txt  main.c  main.cpp
common/: CMakeLists.txt  cli.c  cli.h  config.c  config.h.in  http.c  http.h  subscriptions.c  subscriptions.h  util.c  util.h
liveapi/: CMakeLists.txt  liveapi.c  liveapi.h  messages.c  messages.h  stdin.c  stdin.h
liveapi/libuwsc/: buffer.h  config.h
maar/: CMakeLists.txt  main.c
restapi/: CMakeLists.txt  auth.c  auth.h  im.c  im.h  subscriptions.c  subscriptions.h
